fixed some compile errors

--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.13 Kernel Configuration
+# Linux/arm64 4.4.120 Kernel Configuration
 #
 CONFIG_RING_BUFFER=y
 CONFIG_NF_CONNTRACK_H323=y
@@ -389,6 +389,7 @@ CONFIG_PROC_STLOG=y
 CONFIG_SCSC_BT=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_CAMERA_JACKPOT=y
+CONFIG_HAVE_EBPF_JIT=y
 CONFIG_NF_CONNTRACK_BROADCAST=y
 CONFIG_ECRYPT_FS=y
 CONFIG_CRYPTO_LZ4=y
@@ -865,6 +866,7 @@ CONFIG_CRYPTO_AES=y
 CONFIG_GPIOLIB=y
 CONFIG_MMC_DW=y
 CONFIG_ARM_EXYNOS_DEVFREQ_DEBUG=y
+CONFIG_KEYS_COMPAT=y
 CONFIG_EXYNOS_DPP=y
 CONFIG_NETFILTER_XT_NAT=y
 CONFIG_USB_CONFIGFS_F_MIDI=y
@@ -909,6 +911,7 @@ CONFIG_NETFILTER_INGRESS=y
 CONFIG_VIDEO_EXYNOS_FIMC_IS2=y
 CONFIG_DEFAULT_MPTCP_PM="default"
 CONFIG_USB_NET_CDC_MBIM=y
+CONFIG_CAVIUM_ERRATUM_27456=y
 CONFIG_PSTORE_RAM=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_GENERIC_STRNCPY_FROM_USER=y
@@ -1095,6 +1098,7 @@ CONFIG_TRUSTONIC_TEE_LPAE=y
 CONFIG_HMP_FAST_CPU_MASK="6-7"
 CONFIG_PRINT_QUOTA_WARNING=y
 CONFIG_IP_NF_TARGET_NETMAP=y
+CONFIG_DST_CACHE=y
 CONFIG_NF_REJECT_IPV6=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=21
 CONFIG_MMC_SRPMB=y
@@ -1459,6 +1463,7 @@ CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_HID_SMARTJOYPLUS=y
 CONFIG_NEW_LEDS=y
 CONFIG_SWAP=y
+CONFIG_USB_NET_CDC_SUBSET_ENABLE=y
 CONFIG_CCIC_NOTIFIER=y
 CONFIG_HID_OVR=y
 CONFIG_HMP_VARIABLE_SCALE=y
