--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.13 Kernel Configuration
+# Linux/arm64 4.4.120 Kernel Configuration
 #
 CONFIG_NF_CONNTRACK_H323=Y
 CONFIG_IP_NF_TARGET_REDIRECT=Y
@@ -526,6 +526,7 @@ CONFIG_USB_USBNET=Y
 CONFIG_USB_SERIAL_PL2303=Y
 CONFIG_NET_ACT_POLICE=Y
 CONFIG_HID_SMARTJOYPLUS=Y
+CONFIG_USB_NET_CDC_SUBSET_ENABLE=Y
 CONFIG_HID_OVR=Y
 CONFIG_BLK_DEV_SD=Y
 CONFIG_NETFILTER_NETLINK=Y
