--- a/arch/arm64/configs/exynos7885-jackpot2lte_eur_defconfig
+++ b/arch/arm64/configs/exynos7885-jackpot2lte_eur_defconfig
@@ -3760,6 +3760,7 @@ CONFIG_COMPOSITE_CLK_SAMSUNG=y
 #
 # Clock Source drivers
 #
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CLKSRC_OF=y
 CONFIG_CLKSRC_PROBE=y
 CONFIG_ARM_ARCH_TIMER=y
